syntax = "proto3";

package com.hieplp.recipe.common.grpc.user;

option java_multiple_files = true;
option java_outer_classname = "UserProto";

// Check if username exists
message DoesUsernameExistRequest {
  string userName = 1;
}

message DoesUsernameExistResponse {
  bool exists = 1;
}

//
service UserService {
  rpc doesUsernameExist(DoesUsernameExistRequest) returns (DoesUsernameExistResponse);
}